# HTTP_Server_C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: http.h  http_handler.h  server.h
src/: http.c  http_handler.c  main.c  server.c  socket.c
test/: test_http.c  test_server.c
